add backend functionality

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,11 +1,15 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
+@{
+  Layout = "_Layout";
+}
 
-  </body>
-</html>
+<div class="jumbotron">
+
+  <h3>@Model["word"]</h3>
+  <h4>Tries Remaining: @Model["tries"]</h4>
+  <h4>Tried Letters: @Model["triedLetters"]</h4>
+
+  <form class="" action="/" method="post">
+    <input type="text" name="guess" placeholder="Enter a letter">
+    <button type="submit" name="button">Guess</button>
+  </form>
+</div>
