--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -2,8 +2,9 @@
 <html>
   <head>
     <meta charset='utf-8'>
-    <title>Cd Stuff</title>
+    <title>Hang Man</title>
     <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css'>
+    <link rel="stylesheet" href="/css/styles.css">
   </head>
   <body>
     <div class="container">
